Alter Technique Model & remove the project Phases

--- a/researcher/templates/researcher/index.html
+++ b/researcher/templates/researcher/index.html
@@ -326,7 +326,7 @@
                         <span class='header'>{{ project.project_title }}<span
                                 class='sub-header'> ({{ project.started }} قبل )</span></span>
                             <span><i
-                                    class='fas fa-calendar-alt'></i>این پروژه به در تاریخ  <span>{{ project.date_started }}</span> شروع شده است.</span>
+                                    class='fas fa-calendar-alt'></i>این پروژه به در تاریخ  <span>{{ project.date_project_started }}</span> شروع شده است.</span>
                             <span><i
                                     class='fas fa-calendar-alt'></i>این پروژه به در تاریخ  <span>{{ project.date_finished }}</span> به پایان رسیده است.</span>
                             <span><i
