--- a/researcher/templates/researcher/index.html
+++ b/researcher/templates/researcher/index.html
@@ -91,7 +91,7 @@
                     <a class="nav-item nav-link fs-15" id="nav-done-projects-tab" data-toggle="tab"
                        href="#nav-done-projects"
                        role="tab"
-                       aria-controls="nav-done-projects" aria-selected="false">پروژه‌های غیرقابل‌‌دسترس</a>
+                       aria-controls="nav-done-projects" aria-selected="false">پروژه‌های انجام شده</a>
                 </div>
             </nav>
             <div class="tab-content" id="nav-tabContent">
