--- a/industry/templates/industry/preview_project.html
+++ b/industry/templates/industry/preview_project.html
@@ -229,22 +229,22 @@
                                                         </div>
                                                     {% endif %}
                                                     <div class="project-progress mbottom-lg-25 {% if not project.is_date_valid %}project-progress-disabled{% endif %}">
-{#                                                        <div class="step-container active">#}
-{#                                    <span class="step-date">#}
-{#                                        <div class="start">#}
-{#                                            {{ timeScheduling.start }}#}
-{#                                        </div>#}
-{#                                    </span>#}
-{#                                                            <span class="step-name">#}
-{#                                        شروع پروژه#}
-{#                                    </span>#}
-{#                                                        </div>#}
-{#                                                        <div class="step-container {% is_active project_pk=project_pk phase=1 %}">#}
-{#                                    <span class="step-date">#}
-{#                                        <div class="first_phase">{{ timeScheduling.firstPhase }}</div>#}
-{#                                    </span>#}
-{#                                                            <span class="step-name">جمع آوری داده</span>#}
-{#                                                        </div>#}
+                                                        {#                                                        <div class="step-container active">#}
+                                                        {#                                    <span class="step-date">#}
+                                                        {#                                        <div class="start">#}
+                                                        {#                                            {{ timeScheduling.start }}#}
+                                                        {#                                        </div>#}
+                                                        {#                                    </span>#}
+                                                        {#                                                            <span class="step-name">#}
+                                                        {#                                        شروع پروژه#}
+                                                        {#                                    </span>#}
+                                                        {#                                                        </div>#}
+                                                        {#                                                        <div class="step-container {% is_active project_pk=project_pk phase=1 %}">#}
+                                                        {#                                    <span class="step-date">#}
+                                                        {#                                        <div class="first_phase">{{ timeScheduling.firstPhase }}</div>#}
+                                                        {#                                    </span>#}
+                                                        {#                                                            <span class="step-name">جمع آوری داده</span>#}
+                                                        {#                                                        </div>#}
                                                         <div class="step-container {% is_active project_pk=project_pk phase=2 %}">
                                                             <span class="step-date">
                                                                 <div class="second_phase">{{ timeScheduling.secondPhase }}</div>
@@ -265,6 +265,87 @@
                                                         </div>
                                                         <div class="line-100">
                                                             <div class="arrow"></div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="row mbottom-lg-25">
+                                            <div class="col">
+                                                <span class="section-title">لیست وظایف</span>
+                                                <button type="button"
+                                                        class="border-button section-button"
+                                                        data-toggle="modal"
+                                                        data-target="#">
+                                                    افزودن تسک
+                                                </button>
+                                                <div class="section">
+                                                    <div class="ct-checklist">
+                                                        <div class="ct-checklist__item d-flex">
+                                                            <div class="ct-checklist-item__checkbox">
+                                                                <div class="form-group form-check">
+                                                                    <input type="checkbox"
+                                                                           class="form-check-input inp-cbx"
+                                                                           id="checkList#1"
+                                                                           name="requestResearcher" value=1 hidden>
+                                                                    <label class="form-check-label cbx mb-0"
+                                                                           for="checkList#1">
+                                                                        <span>
+                                                                            <svg class="inline-svg bi bi-check2"
+                                                                                 viewBox="0 0 16 16"
+                                                                                 xmlns="http://www.w3.org/2000/svg">
+                                                                                <path fill-rule="evenodd"
+                                                                                      d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0z"></path>
+                                                                            </svg>
+                                                                        </span>
+                                                                    </label>
+                                                                </div>
+                                                            </div>
+                                                            <div class="ct-checklist-item__detail">
+                                                                <div class="ct-checklist__text">
+                                                                    <span class="atMention me" title="Reza Basereh">@reza_basereh</span>
+                                                                    دکمه «بستن پاسخ»؛ موقعی که پاسخی هنوز نیست، نباشه
+                                                                </div>
+                                                                <div class="ct-checklist-item__control d-flex">
+                                                                    <div class="ct-checklist-item-due">
+                                                                        <button>
+                                                                            <svg width="1em" height="1em"
+                                                                                 viewBox="0 0 16 16" class="bi bi-clock"
+                                                                                 fill="currentColor"
+                                                                                 xmlns="http://www.w3.org/2000/svg">
+                                                                                <path fill-rule="evenodd"
+                                                                                      d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm8-7A8 8 0 1 1 0 8a8 8 0 0 1 16 0z"></path>
+                                                                                <path fill-rule="evenodd"
+                                                                                      d="M7.5 3a.5.5 0 0 1 .5.5v5.21l3.248 1.856a.5.5 0 0 1-.496.868l-3.5-2A.5.5 0 0 1 7 9V3.5a.5.5 0 0 1 .5-.5z"></path>
+                                                                            </svg>
+                                                                        </button>
+                                                                    </div>
+                                                                    <div class="ct-checklist-item-assignee">
+                                                                        <button>
+                                                                            <svg width="1em" height="1em"
+                                                                                 viewBox="0 0 16 16"
+                                                                                 class="bi bi-person-plus"
+                                                                                 fill="currentColor"
+                                                                                 xmlns="http://www.w3.org/2000/svg">
+                                                                                <path fill-rule="evenodd"
+                                                                                      d="M8 5a2 2 0 1 1-4 0 2 2 0 0 1 4 0zM6 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm6 5c0 1-1 1-1 1H1s-1 0-1-1 1-4 6-4 6 3 6 4zm-1-.004c-.001-.246-.154-.986-.832-1.664C9.516 10.68 8.289 10 6 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10zM13.5 5a.5.5 0 0 1 .5.5V7h1.5a.5.5 0 0 1 0 1H14v1.5a.5.5 0 0 1-1 0V8h-1.5a.5.5 0 0 1 0-1H13V5.5a.5.5 0 0 1 .5-.5z"></path>
+                                                                            </svg>
+                                                                        </button>
+                                                                    </div>
+                                                                    <div class="ct-checklist-item-delete">
+                                                                        <button>
+                                                                            <svg width="1em" height="1em"
+                                                                                 viewBox="0 0 16 16" class="bi bi-trash"
+                                                                                 fill="currentColor"
+                                                                                 xmlns="http://www.w3.org/2000/svg">
+                                                                                <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"></path>
+                                                                                <path fill-rule="evenodd"
+                                                                                      d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4L4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"></path>
+                                                                            </svg>
+                                                                        </button>
+                                                                    </div>
+                                                                </div>
+                                                            </div>
                                                         </div>
                                                     </div>
                                                 </div>
