--- a/industry/templates/industry/layouts/show_project.html
+++ b/industry/templates/industry/layouts/show_project.html
@@ -66,7 +66,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row add-comment">
+                    <div class="row">
                         <div class="col-lg-12 text-right">
                             {% include 'industry/layouts/comment.html' %}
                         </div>
